# yap

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
2023/09/23/linux-how-tos---a-must-know-list-of-commands-in-linux-shells/: index.html
2024/09/23/linux-how-tos--a-must-know-list-of-commands-in-linux-shells/: index.html
2024/09/24/function-overloading-in-python/: index.html
2024/10/29/installing-arch-for-dummies-me/: index.html
archive/2023/: index.html
archive/2024/: index.html
category/arch/: index.html
category/cli/: index.html
category/linux/: index.html
category/oop/: index.html
category/python/: index.html
category/shell/: index.html
docs/: .authors.yml  index.md
docs/posts/: arch_install.md  linux_commands.md  overloading.md
overrides/partials/: comments.html
search/: search_index.json
