[tool.poetry]
name = "yap"
version = "0.1.0"
description = "Blogs and misc stuff"
authors = ["externref <shiva02939@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = {extras = ["imaging"], version = "^9.5.36"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
